cuotas y miniaturas producto.html

--- a/producto.html
+++ b/producto.html
@@ -243,15 +243,40 @@
         preciosContainer.appendChild(precioAntEl);
     }
 
-    // Insertar precios en cuotas si hay precio disponible
-    if (cuotas.length) {
-        cuotas.forEach(cuota => {
-            const cuotaEl = document.createElement('p');
-            cuotaEl.className = `product-cuota product-cuota-${cuota.cuotas}`;
-            cuotaEl.textContent = `${cuota.texto}: $${cuota.precio.toLocaleString('es-AR', { minimumFractionDigits: 2, maximumFractionDigits: 2 })}`;
-            preciosContainer.appendChild(cuotaEl);
-        });
-    }
+// Insertar precios en cuotas si hay precio disponible
+if (cuotas.length) {
+    cuotas.forEach(cuota => {
+        const cuotaEl = document.createElement('p');
+        cuotaEl.className = `product-cuota product-cuota-${cuota.cuotas}`;
+        
+        // Definir la imagen y la clase según el número de cuotas
+        let imgSrc, imgClass;
+        if (cuota.cuotas === 3 || cuota.cuotas === 6) {
+            imgSrc = 'images/3_6_9_12.png';
+            imgClass = 'cuota-card-icon cuota-card-icon-3-6'; // Clase común para 3 y 6 cuotas
+        } else if (cuota.cuotas === 9) {
+            imgSrc = 'images/9.png';
+            imgClass = 'cuota-card-icon cuota-card-icon-9'; // Clase específica para 9 cuotas
+        } else if (cuota.cuotas === 12) {
+            imgSrc = 'images/12.png';
+            imgClass = 'cuota-card-icon cuota-card-icon-12'; // Clase específica para 12 cuotas
+        }
+
+        // Crear el texto de la cuota
+        cuotaEl.textContent = `${cuota.texto}: $${cuota.precio.toLocaleString('es-AR', { minimumFractionDigits: 2, maximumFractionDigits: 2 })}`;
+        
+        // Agregar la imagen si existe
+        if (imgSrc) {
+            const cuotaImg = document.createElement('img');
+            cuotaImg.src = imgSrc;
+            cuotaImg.alt = `Tarjetas para ${cuota.cuotas} cuotas`;
+            cuotaImg.className = imgClass;
+            cuotaEl.appendChild(cuotaImg);
+        }
+
+        preciosContainer.appendChild(cuotaEl);
+    });
+}
 
     // Insertar el contenedor de precios antes del elemento 'shipping'
     info.insertBefore(preciosContainer, before);
