--- a/producto.html
+++ b/producto.html
@@ -167,7 +167,12 @@
     </footer>
 
     <!-- Scroll to top -->
-    <button class="scroll-to-top" title="Volver arriba">...</button>
+    <button class="scroll-to-top" title="Volver arriba">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M12 19V5"></path>
+            <path d="M5 12l7-7 7 7"></path>
+        </svg>
+    </button>
 
     <!-- Carga de datos -->
     <script src="precios.js"></script>
